docs(user): api
